<resources>
    <string name="app_name">My Daily Journal</string>
    <string name="logo">logo</string>
    <string name="appName">My Daily Journal</string>
    <string name="desc">A friend to accompany your thoughts</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter">Enter Your Details To\n Get Started</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="rePw">Re Enter Your Password</string>
    <string name="click">Already Signed Up? Click Here To Login</string>
    <string name="enterLogin">Enter Your Login\n Credentials To Continue</string>
    <string name="tapSingUp">Not Registered Yet? Tap Here To Sign Up</string>
    <string name="none">none</string>
    <string name="user">User</string>
    <string name="lines">I Hope You Are Fine.\nEven If You Aren\'t,\nI Am Here To Listen To You :)</string>
    <string name="firstQue">Wanna share your day? I will keep it as a secret ;)</string>
    <string name="start_your_today_s_journal">Start Your Today\'s Journal</string>
    <string name="wanna_see_your_old_journals">Wanna See Your Old Journals?</string>
    <string name="see_your_previous_journals">See Your Previous Journals</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="tap_to_add_photos">Tap to add Photos</string>
    <string name="go_through_your_old_journals_nor_even_edit_them">Go Through Your Old Journals\nOr Even Edit Them</string>
    <string name="title">Title</string>
    <string name="journal_body">Journal Body</string>
    <string name="journal_title">Journal Title</string>
    <string name="save">Save</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_date">2069/04/20</string>
    <string name="sample_time">04:20</string>
    <string name="feel">Feel Free To View or\nEdit Your Journal</string>
    <string name="tap_to_edit">Tap To Edit</string>
    <string name="sample_body">Sample Body</string>
    <string name="tap_tp_delete">Tap Tp Delete</string>
    <string name="update">Update</string>
</resources>