<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddJournal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="145dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hi" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/grey"
            android:text="@string/lines"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="24dp"
            android:text="@string/tap_to_add_photos"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/journal_title"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/pink"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPhoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/bodyEditText"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bodyInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/journal_body"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/pink"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bodyEditText"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>