<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/enter"
            android:textAlignment="center"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:hint="@string/name"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/emailEditText"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/e_mail"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:nextFocusForward="@id/rePasswordEditText"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rePasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/rePw"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rePasswordEditText"
                android:layout_width="250dp"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/green"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordInputLayout" />

        <TextView
            android:id="@+id/click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:textColor="@color/grey"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
